--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
                             <li>
                                 <a 
                                 target="_blank"
-                                href="https://www.twitch.tv/aspaszin">
-                                    <img src="https://static-cdn.jtvnw.net/jtv_user_pictures/56adcee0-86f1-4ade-bcd9-8d9bde1c6670-profile_image-150x150.png" alt="Imagem do Canal aspaszin">
+                                href="https://www.twitch.tv/funkyblackcat">
+                                    <img src="https://static-cdn.jtvnw.net/jtv_user_pictures/funkyblackcat-profile_image-b394ac3870bb91e2-150x150.jpeg" alt="Imagem do Canal funkyblackcat">
                                 </a>
                             </li>
 
